gem2deb (0.36) UNRELEASED; urgency=medium

  * dh-make-ruby: use `FIXME` in Section: when package name is not `ruby-*`,
    to avoid tools being in section `ruby`.
  * gem2deb-test-runner: drop dependency on dpkg-dev. autopkgtest tests should
    be for installed packages, and pulling development tools is Wrong™.
  * Apply patch by James Clarke to fix crash when handling build failures in C
    extensions (Closes: #851172)

 -- Antonio Terceiro <terceiro@debian.org>  Fri, 15 Sep 2017 20:31:46 -0300

gem2deb (0.35) unstable; urgency=medium

  * dh-make-ruby: bump debian/compat template to 10 (Closes: #867741)
  * Gem2Deb::Metadata:
    - use debian/gemspec as gemspec if it exists (Closes: #867739)
  * gem2deb, dh-make-ruby: add -o/--offline option to prevent any access to
    the internet (including but not limited to checking wnpp)

 -- Antonio Terceiro <terceiro@debian.org>  Tue, 18 Jul 2017 10:03:37 -0300

gem2deb (0.34) unstable; urgency=medium

  [ Dominic Cleal ]
  * dh-make-ruby: support concurrent dh-make-ruby processes without one of
    them botching "gem to package" mapping cache (Closes: #862409)

  [ Balasankar C ]
  * Change template copyright to Expat (Closes: #786521)

  [ Antonio Terceiro ]
  * Fix most Ruby warning in the code. They were exposed by rake 12.0.0, which
    runs tests with warnings enabled by default.
  * dh-make-ruby:
    - Bump Standards-Version in produced packages to 4.0.0
  * debian/control:
    - Bump Standards-Version to 4.0.0; no changes needed

 -- Antonio Terceiro <terceiro@debian.org>  Sat, 01 Jul 2017 11:30:17 -0300

gem2deb (0.33.1) unstable; urgency=medium

  * Gem2Deb::GemInstaller:
    - don't install extra_rdoc_files
    - don't install examples/*

 -- Antonio Terceiro <terceiro@debian.org>  Wed, 07 Dec 2016 14:47:07 -0200

gem2deb (0.33) unstable; urgency=medium

  [ Antonio Terceiro ]
  * Gem2Deb::Metadata. Parse timestamp as Date insted of Time. Fixes test
    suite on jessie (Closes: #835588)